get response + request Marvel API, creat classes and interfaces

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,10 @@
             android:name="apiKey"
             android:value="${apiKey}" />
 
+        <meta-data
+            android:name="privateKey"
+            android:value="${privateKey}" />
+
     </application>
 
 </manifest>
