--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,8 +33,8 @@
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
         <meta-data
-            android:name="apiKey"
-            android:value="${apiKey}" />
+            android:name="publicKey"
+            android:value="${publicKey}" />
         <meta-data
             android:name="privateKey"
             android:value="${privateKey}" />
